2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Support for ++ and --): Removed as fixed.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap: Updated from latest gnulib.
	* DEV-NEWS: Update.
	* bootstrap.conf (bootstrap_option_hook): New function.
	(bootstrap_print_option_usage_hook): Likewise.
	(bootstrap_post_import_hook): Honor --jitter-srcdir.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: The INC and DEC operators are
	non-associative.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Arithmetic Operators): Mention ++ and --.
	(Offset Operations): Likewise.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_ORDER_PRE): Rename from PKL_AST_PRE.
	(PKL_AST_ORDER_POST): Rename from PKL_AST_POST.
	(PKL_AST_SIGN_INCR): Rename from PKL_AST_INCR.
	(PKL_AST_SIGN_DECR): Rename from PKL_AST_DECR.
	* libpoke/pkl-anal.c (pkl_analf_ps_incrdecr): Adapt accordingly.
	* libpoke/pkl-typify.c (pkl_typify1_ps_incrdecr): Likewise.
	* libpoke/pkl-tab.y: Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_incrdecr): Likewise.
	* libpoke/pkl-ast.c (pkl_ast_make_incrdecr): Likewise.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (expression): Rules for pre{incr,decr}
	expressions.
	* testsuite/poke.pkl/preincr-1.pk: New test.
	* testsuite/poke.pkl/predecr-offset-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-field-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/predecr-diag-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-aelem-1.pk: Likewise.
	* testsuite/poke.pkl/predecr-2.pk: Likewise.
	* testsuite/poke.pkl/predecr-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-offset-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-field-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-aelem-1.pk: Likewise.
	* testsuite/poke.pkl/preincr-2.pk: Likewise.